src/test/deca/context/invalid/SansObjet/DeclVar-booleanInt.deca
// Description:
//    Declaration of a boolean variable with initialization.
// 
// Results:
//     Incompatible type asignement error
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x = 2 ;
}
